--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -298,6 +298,10 @@ interaction $U(\omega)$. If the bare value is not the proper one, this would als
 lead to a discrepancy especially in the tail sections of the Selfenergy, i.e.
 if the value is too small, the tail will be smaller. 
 
+\textbf{PLEASE NOTE:}
+The GW doublecounting factor $\Sigma^{GW,DC}$ should not contain the Hartree
+part, since the GW Selfenergy $\Sigma^{GW}_{XC}$ does not contain it.
+
 \subsection{Possible problems with the DC}
 One important factor is the causality of the different DC schemes.
 The GW Selfenergy is causal and the impurity Selfenergy is causal,
@@ -876,9 +880,10 @@ with respect to the Fermi level.
 for $H^{DFT}$
 \item $v^{XC}_{mm'}(k)$: The value of the exchange-correlation potential 
 in the Wannier basis for all relevant orbitals
-\item $\Sigma^{GW}_{mm'}(k,i\omega)$: The Selfenergy within GW in the Wannier basis for all relevant orbitals on imaginary frequencies $\omega$.
-\item $\Sigma^{GW,imp}_{mm'}(i\omega) = -[G^{0,loc,L}W^{0,loc,L}]_{mm'}$
-The selfenergy of the impurity model solved in GW, \textit{i.e.}
+\item $\Sigma^{GW,XC}_{mm'}(k,i\omega)$: The exchange-correlation 
+Selfenergy within GW in the Wannier basis for all relevant orbitals on imaginary frequencies $\omega$.
+\item $\Sigma^{GW,imp,XC}_{mm'}(i\omega) = -[G^{0,loc,L}W^{0,loc,L}]^{XC}_{mm'}$
+The exchange-correlation selfenergy of the impurity model solved in GW, \textit{i.e.}
 all indices and internal transitions restricted to the correlated subspace
 \item $V_{abcd}(q)$: The bare Coulomb interaction elements in the Wannier basis for all relevant orbitals.
 \cng{?Do we have V in the product basis of the 3d orbitals? When do we construct this? IMPORTANT: IS the spin also incorporated or kept separate?}
@@ -936,8 +941,8 @@ We then proceed as follows:
 
 \item Make a first guess for the local DMFT impurity Selfenergy  $\Sigma^{imp}$ and polarization $P^{imp}$, for example one can use the GW result
 \begin{align}
-\Sigma^{imp}(i\omega_n) &=  \Sigma^{GW,imp}(i\omega_n) \\
-P^{imp}(i\nu_n) &=  P^{GW,imp}(i\nu_n) .
+\Sigma^{imp}(i\omega_n) &=  \Sigma^{GW,imp,XC}(i\omega_n) + \Sigma^{imp,Hartree} \\
+P^{imp}(i\nu_n) &=  P_{GW,imp}(i\nu_n) .
 \end{align}
 Please note that $\Sigma$ is a matrix in the orbital basis $\Sigma_{mm'}$ and $P$ is a tensor
 $P_{\alpha\beta}$ in the product basis $\{ B_{\alpha} \}$, where $P,V$ and all further tensors are
@@ -949,14 +954,14 @@ $P_{\alpha\beta} = \braket{ B_{\alpha} | P | B_{\beta} }$, etc.
 %term is zero.
 \begin{align}
  G(k,i\omega_n) 
- &= \left[ \unity(i\omega_n+\mu ) -H^{DFT}(k) + v^{XC}(k) + \Sigma^{DFT,Hartree} \right.\\
-          & \hspace{1cm}- \Sigma^{GW}(k,i\omega_n) 
-          + \Sigma^{GW,imp}(i\omega_n)
-          \left. - \Sigma^{imp}(i\omega_n)
+ &= \left[ \unity(i\omega_n+\mu ) -H^{DFT}(k) + v^{XC}(k) + \Sigma^{Hartree}_{DFT} \right.\\
+          & \hspace{1cm}- \Sigma^{XC}_{GW}(k,i\omega_n) 
+          + \Sigma_{GW,imp}^{XC}(i\omega_n)
+          \left. - \Sigma_{imp}(i\omega_n)
            \right]^{-1} \\
 %
-W(q,i\nu_n) &= \left[ V^{-1}(q) - P^{GW}(q,i\nu_n) + P^{GW,imp}(i\nu_n) 
-                              -P^{imp}(i\nu_n)\right]^{-1}
+W(q,i\nu_n) &= \left[ V^{-1}(q) - P_{GW}(q,i\nu_n) + P_{GW,imp}(i\nu_n) 
+                              -P_{imp}(i\nu_n)\right]^{-1}
 \end{align}
 Adjust the chemical potential $\mu$ in a way such that the desired
 filling
@@ -1303,21 +1308,22 @@ In the GW+DMFT cycle we add the GW and the DMFT Selfenergy to the DFT Green's fu
 to build up the final interacting Green's function
 \begin{align}
  G(k,i\omega_n) 
- &= \left[ \unity(i\omega_n+\mu ) -H^{DFT}(k) + v^{XC}(k) + \Sigma^{DFT,Hartree} \right.\\
-          & \hspace{1cm}- \Sigma^{GW}(k,i\omega_n) 
-          + \Sigma^{GW,imp}(i\omega_n)
-          \left. - \Sigma^{imp}(i\omega_n)
+ &= \left[ \unity(i\omega_n+\mu ) -H^{DFT}(k) + v^{XC}(k) + \Sigma^{Hartree}_{DFT} \right.\nonumber\\
+          & \hspace{1cm}- \Sigma^{XC}_{GW}(k,i\omega_n) 
+          + \Sigma_{GW,imp}^{XC}(i\omega_n)
+          \left. - \Sigma_{imp}(i\omega_n)
            \right]^{-1},
 \end{align}
-where $\Sigma^{DFT,Hartree}$ is the Hartree term calculated in DFT.
+where $\Sigma_{DFT}^{Hartree}$ is the Hartree term calculated in DFT.
 The GW Selfenergy does not contain a Hartree component, 
-but the DMFT Selfenergy $\Sigma^{imp}(i\omega_n)$ does, which leads
-to a doublecounting of the Hartree term.
+but the DMFT Selfenergy $\Sigma_{imp}(i\omega_n)$ does, which leads
+to a doublecounting of the Hartree term. Therefore, the DFT Hartree part
+is subtracted via $\Sigma_{DFT}^{Hartree}$.
 
 In general we can expect charge transfer when applying the
 DMFT Method to the correlated orbitals, so the Hartree term is also 
 expected to change. 
-Therefore, we will replace the Hartree term by the one from DMFT.
+Therefore, we will replace the Hartree term completely by the one from DMFT.
 
 We now derive the expression for the Hartree and exchange terms
 contained in DFT in a local orbital basis.
@@ -1530,10 +1536,10 @@ when adding the GW and the DMFT Selfenergy to the Green's function, as
 partially discussed before
 \begin{align}
  G(k,i\omega_n) 
- &= \left[ \unity(i\omega_n+\mu ) -H^{DFT}(k) + v^{XC}(k) + \Sigma^{DFT,Hartree} \right.\nonumber\\
-          & \hspace{1cm}- \Sigma^{GW}(k,i\omega_n) 
-          + \Sigma^{GW,imp}(i\omega_n)
-          \left. - \Sigma^{imp}(i\omega_n)
+ &= \left[ \unity(i\omega_n+\mu ) -H^{DFT}(k) + v^{XC}(k) + \Sigma^{Hartree}_{DFT} \right.\nonumber\\
+          & \hspace{1cm}- \Sigma^{XC}_{GW}(k,i\omega_n) 
+          + \Sigma_{GW,imp}^{XC}(i\omega_n)
+          \left. - \Sigma_{imp}(i\omega_n)
            \right]^{-1},
 \end{align}
 The first one is the doublecounting of the Hartree term, which arises since it is
@@ -1580,7 +1586,7 @@ i.e. the local GW Selfenergy is only given by the local Green's function
 and screened interaction.
 \textbf{This term contains a Hartree part, which should not be incorporated, 
 since it is also not contained in the GW Selfenergy!}
-The Hartree part is obtained from the large $i\omega_n$ limit,
+The full Hartree-Fock part is obtained from the large $i\omega_n$ limit,
 which means that in the summation above we simply get the unscreened Hartree
 values
 \begin{align}
@@ -1590,9 +1596,9 @@ values
 \end{align}
 This last term contains the fillings \textbf{but right now I don't know
 how to correctly perform the frequency summation! Like it is now this would
-give me the negative Hartree part! Solution is still to be found!!!}
+give me the negative Hartree-Fock part! Solution is still to be found!!!}
 
-In general, this Hartree term from the local GW Selfenergy should be identical
+In general, the Hartree term from the local GW Selfenergy should be identical
 to the DFT Hartree term calculated above, since here we use the DFT Green's function
 and the unscreened interaction, which reduces exactly to the sum over
 DFT orbital occupations and interactions. 
@@ -1616,11 +1622,23 @@ from DFT. Therefore, it does not need to be calculated explicitly.
 \textbf{This is only true if $\Sigma^{GW,imp}(i\omega_n)$ is calculated
 as $G_{loc}W_{loc}$ and NOT $[GW]_{loc}$!!}, since in our convention the Hartree part
 is no longer in the GW Selfenergy.
+We adopt the convention that the GW Doublecounting $\Sigma^{GW,imp}(i\omega_n)$
+will always contain the Hartree part from DFT regardless of how the exchange-correlation
+part of it is determined. Therefore, this term takes care of the Hartree Doublecounting
+from DFT$\leftrightarrow \Sigma^{imp}$ and also of the dynamic Doublecounting between
+$\Sigma^{GW}\leftrightarrow \Sigma^{imp}$.
 
 In a GW+DMFT selfconsistency cycle where we do not update the GW calculation
 or interaction, only the DMFT Selfenergy $\Sigma^{imp}(i\omega_n)$
 has to be recalculated and converged. All other Selfenergy or Doublecounting
 terms are determined by the DFT resp. GW result.
+
+Even when we perform a selfconsistent calculation for the screened interaction
+by calculating $P_{imp}$ selfconsistently, the Hartree term in the GW Doublecounting
+will be equal to the DFT hartree part, because it only depends on the DFT
+fillings and the bare interaction, which is not affected. 
+Only in case of a GW-like Selfconsistency where $G_0$ is updated we need 
+to update the GW DC Hartree part. 
 
 
 
