--- a/gw_dmft_docu.tex
+++ b/gw_dmft_docu.tex
@@ -302,6 +302,12 @@ if the value is too small, the tail will be smaller.
 The GW doublecounting factor $\Sigma^{GW,DC}$ should not contain the Hartree
 part, since the GW Selfenergy $\Sigma^{GW}_{XC}$ does not contain it.
 
+First tests using both methods in SrVO3 show that $-G^{0,\mathrm{loc},L}W^{0,\mathrm{loc},L}$
+seems to reduce the rernormalization in the unoccupied part.
+With the other DC there seemed to be a shift in the chemical potential where
+the bands are slightly too low, but the reason for this is not fully clear and
+maybe something else might be responsible, but I don't think so.
+
 \subsection{Possible problems with the DC}
 One important factor is the causality of the different DC schemes.
 The GW Selfenergy is causal and the impurity Selfenergy is causal,
